--- a/src/main/resources/templates/admin/APIInsert.html
+++ b/src/main/resources/templates/admin/APIInsert.html
@@ -44,7 +44,7 @@
 					<td th:text="${horse.hrNo}"></td>
 					<td th:text="${horse.hrName}"></td>
 					<td th:text="${horse.sex}"></td>
-					<td th:text="${horse.rank}"></td>
+					<td th:text="${horse.ranks}"></td>
 					<td th:text="${horse.nation}"></td>
 					<td th:text="${horse.birthDay}"></td>
 					<td th:text="${horse.rating}"></td>
