--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,26 +1,158 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
 <meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
-<meta id="_csrf_header" name="_csrf_header" th:content="${_csrf.headerName}" />
-<script
-	src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="http://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-<meta charset="UTF-8">
-<title>main</title>
+<meta id="_csrf_header" name="_csrf_header"
+	th:content="${_csrf.headerName}" />
+<meta charset="utf-8">
+<meta name="viewport"
+	content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="description" content="">
+<meta name="author" content="">
+<title>Test Page</title>
+
+<!-- Bootstrap core CSS -->
+<link href="/static/vendor/bootstrap/css/bootstrap.min.css"
+	rel="stylesheet">
+
+<!-- Bootstrap core CSS -->
+<link href="/static/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
+
+<!-- Custom styles for this template -->
+<link href="/static/css/modern-business.css" rel="stylesheet">
 </head>
 <body>
-	<a th:href="@{/home}">홈</a>
-	<div>
-		<input id="search" type="text" placeholder="검색어를 입력해 주세요" name="search" />
+	<!-- Navigation -->
+	<nav
+		class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+		<div class="container">
+			<a class="navbar-brand" href="index.html">Start Bootstrap</a>
+			<button class="navbar-toggler navbar-toggler-right" type="button"
+				data-toggle="collapse" data-target="#navbarResponsive"
+				aria-controls="navbarResponsive" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item"><a class="nav-link" href="about.html">About</a>
+					</li>
+					<li class="nav-item"><a class="nav-link" href="services.html">Services</a>
+					</li>
+					<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a>
+					</li>
+					<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" href="#"
+						id="navbarDropdownPortfolio" data-toggle="dropdown"
+						aria-haspopup="true" aria-expanded="false"> Portfolio </a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
+							<a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a> 
+							<a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a> 
+							<a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a> 
+							<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a> 
+							<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+						</div></li>
+					<li class="nav-item dropdown"><a
+						class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog"
+						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Blog </a>
+						<div class="dropdown-menu dropdown-menu-right"
+							aria-labelledby="navbarDropdownBlog">
+							<a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
+							<a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
+							<a class="dropdown-item" href="blog-post.html">Blog Post</a>
+						</div></li>
+					<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Other Pages </a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
+							<a class="dropdown-item" th:href="@{/home}">login</a> 
+							<a class="dropdown-item" href="sidebar.html">SidebarPage</a> 
+							<a class="dropdown-item" href="faq.html">FAQ</a> 
+							<a class="dropdown-item" href="404.html">404</a> 
+							<a class="dropdown-item" href="pricing.html">Pricing Table</a>
+						</div></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+	<div class="input-group mb-3">
+		<input id="search" type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
+		<div class="input-group-prepend">
+			<button type="button" class="btn btn-outline-primary">
+				<svg width="1em" height="1em" viewBox="0 0 16 16"
+					class="bi bi-search" fill="currentColor"
+					xmlns="http://www.w3.org/2000/svg">
+  			<path fill-rule="evenodd"
+						d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"></path>
+ 			<path fill-rule="evenodd"
+						d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"></path>
+		  </svg>
+			</button>
+		</div>
+		
+		<div class="container" id="recommendWord">
+			<th:block th:unless="${#lists.isEmpty(recommendWord)} ">
+				<ul id="recommendList">
+					<li style="list-style: none" th:each="recommend: ${recommendWord}" th:text=${recommend}></li>
+				</ul>
+			</th:block>
+		</div>
 	</div>
-	<div id="recommendWord">
-		<th:block th:unless="${#lists.isEmpty(recommendWord)} ">
-			<ul id="recommendList">
-				<li style="list-style: none" th:each="recommend: ${recommendWord}" th:text=${recommend}></li>
-			</ul>
-		</th:block>
-	</div>
+
+	<header>
+		<div id="carouselExampleIndicators" class="carousel slide"
+			data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li data-target="#carouselExampleIndicators" data-slide-to="0"
+					class="active"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner" role="listbox">
+				<!-- Slide One - Set the background image for this slide in the line below -->
+				<div class="carousel-item active"
+					style="background-image: url('http://placehold.it/1900x1080')">
+					<div class="carousel-caption d-none d-md-block">
+						<h3>First Slide</h3>
+						<p>This is a description for the first slide.</p>
+					</div>
+				</div>
+				<!-- Slide Two - Set the background image for this slide in the line below -->
+				<div class="carousel-item"
+					style="background-image: url('http://placehold.it/1900x1080')">
+					<div class="carousel-caption d-none d-md-block">
+						<h3>Second Slide</h3>
+						<p>This is a description for the second slide.</p>
+					</div>
+				</div>
+				<!-- Slide Three - Set the background image for this slide in the line below -->
+				<div class="carousel-item"
+					style="background-image: url('http://placehold.it/1900x1080')">
+					<div class="carousel-caption d-none d-md-block">
+						<h3>Third Slide</h3>
+						<p>This is a description for the third slide.</p>
+					</div>
+				</div>
+			</div>
+			<a class="carousel-control-prev" href="#carouselExampleIndicators"
+				role="button" data-slide="prev"> <span
+				class="carousel-control-prev-icon" aria-hidden="true"></span> <span
+				class="sr-only">Previous</span>
+			</a> <a class="carousel-control-next" href="#carouselExampleIndicators"
+				role="button" data-slide="next"> <span
+				class="carousel-control-next-icon" aria-hidden="true"></span> <span
+				class="sr-only">Next</span>
+			</a>
+		</div>
+	</header>
+
+	<!-- Page Content -->
+
+	<!-- /.container -->
+
+	<!-- test sheet -->
 	<div id="information">
 		<th:block th:unless="${#lists.isEmpty(searchHorse)}">
 			<h3>말 목록</h3>
@@ -41,7 +173,8 @@
 				</tr>
 				<tr th:each="horse : ${searchHorse}">
 					<td th:text="${horse.hrNo}"></td>
-					<td th:onclick='horseDetail([[${horse.hrNo}]], [[${horse.trNo}]])' th:text="${horse.hrName}"></td>
+					<td th:onclick='horseDetail([[${horse.hrNo}]], [[${horse.trNo}]])'
+						th:text="${horse.hrName}"></td>
 					<td th:text="${horse.sex}"></td>
 					<td th:text="${horse.ranks}"></td>
 					<td th:text="${horse.nation}"></td>
@@ -55,7 +188,7 @@
 				</tr>
 			</table>
 		</th:block>
-		
+
 		<th:block th:unless="${#lists.isEmpty(searchTrainer)}">
 			<h3>조교사 목록</h3>
 			<table border=1>
@@ -72,7 +205,8 @@
 				</tr>
 				<tr th:each="tr : ${searchTrainer}">
 					<td th:text="${tr.trNo}"></td>
-					<td th:onclick='trainerDetail([[${tr.trNo}]])' th:text="${tr.trName}"></td>
+					<td th:onclick='trainerDetail([[${tr.trNo}]])'
+						th:text="${tr.trName}"></td>
 					<td th:text="${tr.part}"></td>
 					<td th:text="${tr.debut}"></td>
 					<td th:text="${tr.tYearTotal}"></td>
@@ -83,7 +217,7 @@
 				</tr>
 			</table>
 		</th:block>
-		
+
 		<th:block th:unless="${#lists.isEmpty(searchJockey)}">
 			<h3>기수 목록</h3>
 			<table border=1>
@@ -99,11 +233,12 @@
 					<th>통산 승률</th>
 					<th>통산 복승률</th>
 					<th>통산 연승률</th>
-					<th>은퇴 날짜 </th>
+					<th>은퇴 날짜</th>
 				</tr>
 				<tr th:each="jk : ${searchJockey}">
 					<td th:text="${jk.jkNo}"></td>
-					<td th:onclick='jockeyDetail([[${jk.jkNo}]])' th:text="${jk.jkName}"></td>
+					<td th:onclick='jockeyDetail([[${jk.jkNo}]])'
+						th:text="${jk.jkName}"></td>
 					<td th:text="${jk.trNo}"></td>
 					<td th:text="${jk.part}"></td>
 					<td th:text="${jk.jRweight}"></td>
@@ -117,24 +252,44 @@
 				</tr>
 			</table>
 	</div>
+	<!-- test sheet end -->
+
+	<!-- Footer -->
+	<footer class="py-5 bg-dark">
+		<div class="container">
+			<p class="m-0 text-center text-white">Copyright &copy; Your
+				Website 2020</p>
+		</div>
+		<!-- /.container -->
+	</footer>
+
+	<!-- Bootstrap core JavaScript -->
+	<script src="/static/vendor/jquery/jquery.min.js"></script>
+	<script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 	
 	<script>
 		let token = $("meta[name='_csrf']").attr("content");
 		let header = $("meta[name='_csrf_header']").attr("content");
-		
+
 		$(function() {
-		    $(document).ajaxSend(function(e, xhr, options) {
-		        xhr.setRequestHeader(header, token);
-		    });
+			$(document).ajaxSend(function(e, xhr, options) {
+				xhr.setRequestHeader(header, token);
+			});
 		});
 
-		$("#search").keyup(function(key){
+		$("#search").bind("keyup input", function(key) {
 			let search = $("#search").val();
+			let last_char = search.charAt(search.length - 1);
+			console.log(last_char);
 			if (key.keyCode !== 13) {
+				console.log("recommend");
+				console.log(key.keyCode);
 				$.ajax({
-					url : "/recommendWord",
+					url : "/search/recommendWord",
 					type : "POST",
-					data : {"search" : search},
+					data : {
+						"search" : search
+					},
 					dataType : "text",
 					success : function(retVal) {
 						$("#recommendWord").val("");
@@ -144,40 +299,46 @@
 						alert("error");
 					}
 				});
-			}else if(search !==  ""){
+			} else if (search !== "") {
+				console.log("search");
+				console.log(key.keyCode);
 				$.ajax({
-					url : "/searchTest",
+					url : "/search",
 					type : "POST",
-					data : {"search" : search},
+					data : {
+						"search" : search
+					},
 					dataType : "text",
 					success : function(retVal) {
 						$("#information").val("");
-						$("#recommendList").remove(); 
+						$("#recommendWord").val("");
+						$("#recommendList").remove();
 						$("#information").replaceWith(retVal);
 					},
 					error : function() {
 						alert("error");
 					}
 				});
-			 };
+			}
+			;
 		});
-		
-		function horseDetail(hrNo, trNo){
-			
+
+		function horseDetail(hrNo, trNo) {
+
 			let form = document.createElement("form");
 			form.setAttribute("method", "POST");
 			form.setAttribute("action", "/horseDetail");
-			
+
 			let hiddenField1 = document.createElement("input");
 			hiddenField1.setAttribute("type", "hidden");
 			hiddenField1.setAttribute("name", "hrNo");
 			hiddenField1.setAttribute("value", hrNo);
-			
+
 			let hiddenField2 = document.createElement("input");
 			hiddenField2.setAttribute("type", "hidden");
 			hiddenField2.setAttribute("name", "trNo");
 			hiddenField2.setAttribute("value", trNo);
-			
+
 			let csrf1 = document.createElement("input");
 			csrf1.setAttribute("type", "hidden");
 			csrf1.setAttribute("name", "_csrf");
@@ -186,22 +347,22 @@
 			form.appendChild(csrf1);
 			form.appendChild(hiddenField1);
 			form.appendChild(hiddenField2);
-			
+
 			document.body.appendChild(form);
 			form.submit();
 		}
-		
-		function trainerDetail(trNo){
-			
+
+		function trainerDetail(trNo) {
+
 			let form = document.createElement("form");
 			form.setAttribute("method", "POST");
 			form.setAttribute("action", "/trainerDetail");
-			
+
 			let hiddenField1 = document.createElement("input");
 			hiddenField1.setAttribute("type", "hidden");
 			hiddenField1.setAttribute("name", "trNo");
 			hiddenField1.setAttribute("value", trNo);
-			
+
 			let csrf1 = document.createElement("input");
 			csrf1.setAttribute("type", "hidden");
 			csrf1.setAttribute("name", "_csrf");
@@ -209,22 +370,22 @@
 
 			form.appendChild(csrf1);
 			form.appendChild(hiddenField1);
-			
+
 			document.body.appendChild(form);
 			form.submit();
 		}
-		
-		function jockeyDetail(jkNo){
-			
+
+		function jockeyDetail(jkNo) {
+
 			let form = document.createElement("form");
 			form.setAttribute("method", "POST");
 			form.setAttribute("action", "/jockeyDetail");
-			
+
 			let hiddenField1 = document.createElement("input");
 			hiddenField1.setAttribute("type", "hidden");
 			hiddenField1.setAttribute("name", "jkNo");
 			hiddenField1.setAttribute("value", jkNo);
-			
+
 			let csrf1 = document.createElement("input");
 			csrf1.setAttribute("type", "hidden");
 			csrf1.setAttribute("name", "_csrf");
@@ -232,11 +393,12 @@
 
 			form.appendChild(csrf1);
 			form.appendChild(hiddenField1);
-			
+
 			document.body.appendChild(form);
 			form.submit();
 		}
 	</script>
 
 </body>
+
 </html>
