--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,76 +1,53 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
-<head>
-<meta id="_csrf" name="_csrf" th:content="${_csrf.token}" />
-<meta id="_csrf_header" name="_csrf_header"
-	th:content="${_csrf.headerName}" />
-<meta charset="utf-8">
-<meta name="viewport"
-	content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<meta name="description" content="">
-<meta name="author" content="">
-<title>Test Page</title>
-
-<!-- Bootstrap core CSS -->
-<link href="/static/vendor/bootstrap/css/bootstrap.min.css"
-	rel="stylesheet">
-
-<!-- Bootstrap core CSS -->
-<link href="/static/vendor/bootstrap/css/bootstrap.css" rel="stylesheet">
-
-<!-- Custom styles for this template -->
-<link href="/static/css/modern-business.css" rel="stylesheet">
-</head>
-<body>
+<html
+  lang="ko"
+  xmlns="http://www.w3.org/1999/xhtml"
+  xmlns:th="http://www.thymeleaf.org"
+  xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
+  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+  layout:decorator="layout/layout"
+>
+	<main layout:fragment="content">
 	<!-- Navigation -->
-	<nav
-		class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+	<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Start Bootstrap</a>
-			<button class="navbar-toggler navbar-toggler-right" type="button"
-				data-toggle="collapse" data-target="#navbarResponsive"
-				aria-controls="navbarResponsive" aria-expanded="false"
+			<a class="navbar-brand" th:href="@{/}">Start Bootstrap</a>
+			<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
 				aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
-					<li class="nav-item"><a class="nav-link" href="about.html">About</a>
+					<li class="nav-item"><a class="nav-link" th:href="@{#none}">About</a>
 					</li>
-					<li class="nav-item"><a class="nav-link" href="services.html">Services</a>
+					<li class="nav-item"><a class="nav-link" th:href="@{#none}">Services</a>
 					</li>
-					<li class="nav-item"><a class="nav-link" href="contact.html">Contact</a>
+					<li class="nav-item"><a class="nav-link" th:href="@{#none}">Contact</a>
 					</li>
-					<li class="nav-item dropdown"><a
-						class="nav-link dropdown-toggle" href="#"
-						id="navbarDropdownPortfolio" data-toggle="dropdown"
-						aria-haspopup="true" aria-expanded="false"> Portfolio </a>
+					<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPortfolio" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Portfolio </a>
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPortfolio">
-							<a class="dropdown-item" href="portfolio-1-col.html">1 Column Portfolio</a> 
-							<a class="dropdown-item" href="portfolio-2-col.html">2 Column Portfolio</a> 
-							<a class="dropdown-item" href="portfolio-3-col.html">3 Column Portfolio</a> 
-							<a class="dropdown-item" href="portfolio-4-col.html">4 Column Portfolio</a> 
-							<a class="dropdown-item" href="portfolio-item.html">Single Portfolio Item</a>
+							<a class="dropdown-item" th:href="@{#none}">1 Column Portfolio</a> 
+							<a class="dropdown-item" th:href="@{#none}">2 Column Portfolio</a> 
+							<a class="dropdown-item" th:href="@{#none}">3 Column Portfolio</a> 
+							<a class="dropdown-item" th:href="@{#none}">4 Column Portfolio</a> 
+							<a class="dropdown-item" th:href="@{#none}">Single Portfolio Item</a>
 						</div></li>
-					<li class="nav-item dropdown"><a
-						class="nav-link dropdown-toggle" href="#" id="navbarDropdownBlog"
-						data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Blog </a>
-						<div class="dropdown-menu dropdown-menu-right"
-							aria-labelledby="navbarDropdownBlog">
-							<a class="dropdown-item" href="blog-home-1.html">Blog Home 1</a>
-							<a class="dropdown-item" href="blog-home-2.html">Blog Home 2</a>
-							<a class="dropdown-item" href="blog-post.html">Blog Post</a>
+					<li class="nav-item dropdown">
+					<a class="nav-link dropdown-toggle" th:href="@{#none}" id="navbarDropdownBlog" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Blog </a>
+						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownBlog">
+							<a class="dropdown-item" th:href="@{#none}">Blog Home 1</a>
+							<a class="dropdown-item" th:href="@{#none}">Blog Home 2</a>
+							<a class="dropdown-item" th:href="@{#none}">Blog Post</a>
 						</div></li>
 					<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownPages" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Other Pages </a>
 						<div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownPages">
 							<a class="dropdown-item" th:href="@{/home}">login</a> 
-							<a class="dropdown-item" href="sidebar.html">SidebarPage</a> 
-							<a class="dropdown-item" href="faq.html">FAQ</a> 
-							<a class="dropdown-item" href="404.html">404</a> 
-							<a class="dropdown-item" href="pricing.html">Pricing Table</a>
+							<a class="dropdown-item" th:href="@{#none}">SidebarPage</a> 
+							<a class="dropdown-item" th:href="@{#none}">FAQ</a> 
+							<a class="dropdown-item" th:href="@{#none}">404</a> 
+							<a class="dropdown-item" th:href="@{#none}">Pricing Table</a>
 						</div></li>
 				</ul>
 			</div>
@@ -81,13 +58,9 @@
 		<input id="search" type="text" class="form-control" placeholder="" aria-label="Example text with button addon" aria-describedby="button-addon1">
 		<div class="input-group-prepend">
 			<button type="button" class="btn btn-outline-primary">
-				<svg width="1em" height="1em" viewBox="0 0 16 16"
-					class="bi bi-search" fill="currentColor"
-					xmlns="http://www.w3.org/2000/svg">
-  			<path fill-rule="evenodd"
-						d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"></path>
- 			<path fill-rule="evenodd"
-						d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"></path>
+				<svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-search" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+  			<path fill-rule="evenodd" d="M10.442 10.442a1 1 0 0 1 1.415 0l3.85 3.85a1 1 0 0 1-1.414 1.415l-3.85-3.85a1 1 0 0 1 0-1.415z"></path>
+ 			<path fill-rule="evenodd" d="M6.5 12a5.5 5.5 0 1 0 0-11 5.5 5.5 0 0 0 0 11zM13 6.5a6.5 6.5 0 1 1-13 0 6.5 6.5 0 0 1 13 0z"></path>
 		  </svg>
 			</button>
 		</div>
@@ -100,57 +73,6 @@
 			</th:block>
 		</div>
 	</div>
-
-	<header>
-		<div id="carouselExampleIndicators" class="carousel slide"
-			data-ride="carousel">
-			<ol class="carousel-indicators">
-				<li data-target="#carouselExampleIndicators" data-slide-to="0"
-					class="active"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-				<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-			</ol>
-			<div class="carousel-inner" role="listbox">
-				<!-- Slide One - Set the background image for this slide in the line below -->
-				<div class="carousel-item active"
-					style="background-image: url('http://placehold.it/1900x1080')">
-					<div class="carousel-caption d-none d-md-block">
-						<h3>First Slide</h3>
-						<p>This is a description for the first slide.</p>
-					</div>
-				</div>
-				<!-- Slide Two - Set the background image for this slide in the line below -->
-				<div class="carousel-item"
-					style="background-image: url('http://placehold.it/1900x1080')">
-					<div class="carousel-caption d-none d-md-block">
-						<h3>Second Slide</h3>
-						<p>This is a description for the second slide.</p>
-					</div>
-				</div>
-				<!-- Slide Three - Set the background image for this slide in the line below -->
-				<div class="carousel-item"
-					style="background-image: url('http://placehold.it/1900x1080')">
-					<div class="carousel-caption d-none d-md-block">
-						<h3>Third Slide</h3>
-						<p>This is a description for the third slide.</p>
-					</div>
-				</div>
-			</div>
-			<a class="carousel-control-prev" href="#carouselExampleIndicators"
-				role="button" data-slide="prev"> <span
-				class="carousel-control-prev-icon" aria-hidden="true"></span> <span
-				class="sr-only">Previous</span>
-			</a> <a class="carousel-control-next" href="#carouselExampleIndicators"
-				role="button" data-slide="next"> <span
-				class="carousel-control-next-icon" aria-hidden="true"></span> <span
-				class="sr-only">Next</span>
-			</a>
-		</div>
-	</header>
-
-	<!-- Page Content -->
-
-	<!-- /.container -->
 
 	<!-- test sheet -->
 	<div id="information">
@@ -253,152 +175,141 @@
 			</table>
 	</div>
 	<!-- test sheet end -->
-
-	<!-- Footer -->
-	<footer class="py-5 bg-dark">
-		<div class="container">
-			<p class="m-0 text-center text-white">Copyright &copy; Your
-				Website 2020</p>
-		</div>
-		<!-- /.container -->
-	</footer>
-
-	<!-- Bootstrap core JavaScript -->
-	<script src="/static/vendor/jquery/jquery.min.js"></script>
-	<script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+</main>
+	<th:block layout:fragment="script">
+		<!-- Bootstrap core JavaScript -->
+		<script src="/static/vendor/jquery/jquery.min.js"></script>
+		<script src="/static/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script>
+			let token = $("meta[name='_csrf']").attr("content");
+			let header = $("meta[name='_csrf_header']").attr("content");
 	
-	<script>
-		let token = $("meta[name='_csrf']").attr("content");
-		let header = $("meta[name='_csrf_header']").attr("content");
-
-		$(function() {
-			$(document).ajaxSend(function(e, xhr, options) {
-				xhr.setRequestHeader(header, token);
+			$(function() {
+				$(document).ajaxSend(function(e, xhr, options) {
+					xhr.setRequestHeader(header, token);
+				});
 			});
-		});
-
-		$("#search").bind("keyup input", function(key) {
-			let search = $("#search").val();
-			let last_char = search.charAt(search.length - 1);
-			console.log(last_char);
-			if (key.keyCode !== 13) {
-				console.log("recommend");
-				console.log(key.keyCode);
-				$.ajax({
-					url : "/search/recommendWord",
-					type : "POST",
-					data : {
-						"search" : search
-					},
-					dataType : "text",
-					success : function(retVal) {
-						$("#recommendWord").val("");
-						$("#recommendWord").replaceWith(retVal);
-					},
-					error : function() {
-						alert("error");
-					}
-				});
-			} else if (search !== "") {
-				console.log("search");
-				console.log(key.keyCode);
-				$.ajax({
-					url : "/search",
-					type : "POST",
-					data : {
-						"search" : search
-					},
-					dataType : "text",
-					success : function(retVal) {
-						$("#information").val("");
-						$("#recommendWord").val("");
-						$("#recommendList").remove();
-						$("#information").replaceWith(retVal);
-					},
-					error : function() {
-						alert("error");
-					}
-				});
+	
+			$("#search").bind("keyup input", function(key) {
+				let search = $("#search").val();
+				let last_char = search.charAt(search.length - 1);
+				console.log(last_char);
+				if (key.keyCode !== 13) {
+					console.log("recommend");
+					console.log(key.keyCode);
+					$.ajax({
+						url : "/search/recommendWord",
+						type : "POST",
+						data : {
+							"search" : search
+						},
+						dataType : "text",
+						success : function(retVal) {
+							$("#recommendWord").val("");
+							$("#recommendWord").replaceWith(retVal);
+						},
+						error : function() {
+							alert("error");
+						}
+					});
+				} else if (search !== "") {
+					console.log("search");
+					console.log(key.keyCode);
+					$.ajax({
+						url : "/search",
+						type : "POST",
+						data : {
+							"search" : search
+						},
+						dataType : "text",
+						success : function(retVal) {
+							$("#information").val("");
+							$("#recommendWord").val("");
+							$("#recommendList").remove();
+							$("#information").replaceWith(retVal);
+						},
+						error : function() {
+							alert("error");
+						}
+					});
+				}
+				;
+			});
+	
+			function horseDetail(hrNo, trNo) {
+	
+				let form = document.createElement("form");
+				form.setAttribute("method", "POST");
+				form.setAttribute("action", "/horseDetail");
+	
+				let hiddenField1 = document.createElement("input");
+				hiddenField1.setAttribute("type", "hidden");
+				hiddenField1.setAttribute("name", "hrNo");
+				hiddenField1.setAttribute("value", hrNo);
+	
+				let hiddenField2 = document.createElement("input");
+				hiddenField2.setAttribute("type", "hidden");
+				hiddenField2.setAttribute("name", "trNo");
+				hiddenField2.setAttribute("value", trNo);
+	
+				let csrf1 = document.createElement("input");
+				csrf1.setAttribute("type", "hidden");
+				csrf1.setAttribute("name", "_csrf");
+				csrf1.setAttribute("value", token);
+	
+				form.appendChild(csrf1);
+				form.appendChild(hiddenField1);
+				form.appendChild(hiddenField2);
+	
+				document.body.appendChild(form);
+				form.submit();
 			}
-			;
-		});
+	
+			function trainerDetail(trNo) {
+	
+				let form = document.createElement("form");
+				form.setAttribute("method", "POST");
+				form.setAttribute("action", "/trainerDetail");
+	
+				let hiddenField1 = document.createElement("input");
+				hiddenField1.setAttribute("type", "hidden");
+				hiddenField1.setAttribute("name", "trNo");
+				hiddenField1.setAttribute("value", trNo);
+	
+				let csrf1 = document.createElement("input");
+				csrf1.setAttribute("type", "hidden");
+				csrf1.setAttribute("name", "_csrf");
+				csrf1.setAttribute("value", token);
+	
+				form.appendChild(csrf1);
+				form.appendChild(hiddenField1);
+	
+				document.body.appendChild(form);
+				form.submit();
+			}
+	
+			function jockeyDetail(jkNo) {
+	
+				let form = document.createElement("form");
+				form.setAttribute("method", "POST");
+				form.setAttribute("action", "/jockeyDetail");
+	
+				let hiddenField1 = document.createElement("input");
+				hiddenField1.setAttribute("type", "hidden");
+				hiddenField1.setAttribute("name", "jkNo");
+				hiddenField1.setAttribute("value", jkNo);
+	
+				let csrf1 = document.createElement("input");
+				csrf1.setAttribute("type", "hidden");
+				csrf1.setAttribute("name", "_csrf");
+				csrf1.setAttribute("value", token);
+	
+				form.appendChild(csrf1);
+				form.appendChild(hiddenField1);
+	
+				document.body.appendChild(form);
+				form.submit();
+			}
+		</script>
+	</th:block>
 
-		function horseDetail(hrNo, trNo) {
-
-			let form = document.createElement("form");
-			form.setAttribute("method", "POST");
-			form.setAttribute("action", "/horseDetail");
-
-			let hiddenField1 = document.createElement("input");
-			hiddenField1.setAttribute("type", "hidden");
-			hiddenField1.setAttribute("name", "hrNo");
-			hiddenField1.setAttribute("value", hrNo);
-
-			let hiddenField2 = document.createElement("input");
-			hiddenField2.setAttribute("type", "hidden");
-			hiddenField2.setAttribute("name", "trNo");
-			hiddenField2.setAttribute("value", trNo);
-
-			let csrf1 = document.createElement("input");
-			csrf1.setAttribute("type", "hidden");
-			csrf1.setAttribute("name", "_csrf");
-			csrf1.setAttribute("value", token);
-
-			form.appendChild(csrf1);
-			form.appendChild(hiddenField1);
-			form.appendChild(hiddenField2);
-
-			document.body.appendChild(form);
-			form.submit();
-		}
-
-		function trainerDetail(trNo) {
-
-			let form = document.createElement("form");
-			form.setAttribute("method", "POST");
-			form.setAttribute("action", "/trainerDetail");
-
-			let hiddenField1 = document.createElement("input");
-			hiddenField1.setAttribute("type", "hidden");
-			hiddenField1.setAttribute("name", "trNo");
-			hiddenField1.setAttribute("value", trNo);
-
-			let csrf1 = document.createElement("input");
-			csrf1.setAttribute("type", "hidden");
-			csrf1.setAttribute("name", "_csrf");
-			csrf1.setAttribute("value", token);
-
-			form.appendChild(csrf1);
-			form.appendChild(hiddenField1);
-
-			document.body.appendChild(form);
-			form.submit();
-		}
-
-		function jockeyDetail(jkNo) {
-
-			let form = document.createElement("form");
-			form.setAttribute("method", "POST");
-			form.setAttribute("action", "/jockeyDetail");
-
-			let hiddenField1 = document.createElement("input");
-			hiddenField1.setAttribute("type", "hidden");
-			hiddenField1.setAttribute("name", "jkNo");
-			hiddenField1.setAttribute("value", jkNo);
-
-			let csrf1 = document.createElement("input");
-			csrf1.setAttribute("type", "hidden");
-			csrf1.setAttribute("name", "_csrf");
-			csrf1.setAttribute("value", token);
-
-			form.appendChild(csrf1);
-			form.appendChild(hiddenField1);
-
-			document.body.appendChild(form);
-			form.submit();
-		}
-	</script>
-
-</body>
-
-</html>
