horse, jockey, trainer modify

--- a/src/main/resources/templates/admin/APIInsert.html
+++ b/src/main/resources/templates/admin/APIInsert.html
@@ -40,6 +40,8 @@
 					<th>승률</th>
 					<th>복승률</th>
 					<th>연승률</th>
+					<th>meet</th>
+					<th>act</th>
 				</tr>
 				<tr th:each="horse : ${horseList}">
 					<td th:text="${horse.hrNo}"></td>
@@ -54,6 +56,8 @@
 					<td th:text="${horse.WinningP}"></td>
 					<td th:text="${horse.ComplementaryRate}"></td>
 					<td th:text="${horse.ConsecutiveWinningP}"></td>
+					<td th:text="${horse.meet}"></td>
+					<td th:text="${horse.act}"></td>
 				</tr>
 			</table>
 		</th:block>
@@ -71,6 +75,8 @@
 					<th>통산 승률</th>
 					<th>통산 복승률</th>
 					<th>통산 연승률</th>
+					<th>meet</th>
+					<th>act</th>
 				</tr>
 				<tr th:each="tr : ${trList}">
 					<td th:text="${tr.trNo}"></td>
@@ -82,6 +88,8 @@
 					<td th:text="${tr.tWinningP}"></td>
 					<td th:text="${tr.tComplementRyRate}"></td>
 					<td th:text="${tr.tConsecutiveWinningP}"></td>
+					<td th:text="${tr.meet}"></td>
+					<td th:text="${tr.act}"></td>
 				</tr>
 			</table>
 		</th:block>
@@ -102,6 +110,8 @@
 					<th>통산 복승률</th>
 					<th>통산 연승률</th>
 					<th>은퇴 날짜 </th>
+					<th>meet</th>
+					<th>act</th>
 				</tr>
 				<tr th:each="jk : ${jkList}">
 					<td th:text="${jk.jkNo}"></td>
@@ -116,6 +126,8 @@
 					<td th:text="${jk.jComplementRyRate}"></td>
 					<td th:text="${jk.jWinningP}"></td>
 					<td th:text="${jk.spDate}"></td>
+					<td th:text="${jk.meet}"></td>
+					<td th:text="${jk.act}"></td>
 				</tr>
 			</table>
 		</th:block>
@@ -213,7 +225,6 @@
 
 			});
 		});
-		
 	</script>
 </body>
 </html>
