--- a/src/main/resources/templates/member/signup.html
+++ b/src/main/resources/templates/member/signup.html
@@ -67,6 +67,6 @@
 			<tr>
 		</table>
 	</form>
-	<script src="/js/regicheck.js"></script>
+	<script src="/static/js/regicheck.js"></script>
 </body>
 </html>
